# coursera_red

./: .gitignore  CMakeLists.txt  README.md  main.cpp
profile/: profile.h
project/: iterator_range.h  parse.h  project.rar  search_server.cpp  search_server.h
project_multi/: main.cpp  project_multi.rar  search_server.cpp  search_server.h
test_runner/: CMakeLists.txt  test_runner_portable.cpp  test_runner_portable.h
test_runner_lib/: test_runner.cpp  test_runner.h
week_1/: airline_ticket.h  bad_macro.cpp  deque_via_two_vectors.h  log.cpp  max_element_if.cpp  paginator.cpp  sort_by.cpp  table.cpp  test_runner.h  uniq_id.cpp  update_field.cpp
week_2/: booking.cpp  ebook.cpp  expresses.cpp  learner.cpp  sort_students.cpp  student.h
week_3/: linked_list.cpp  object_pool.cpp  simple_vector.cpp  simple_vector.h  swap_sort_copy.cpp
week_4/: airport_counter.cpp  athlets.cpp  http_request.h  server_stats.cpp  stack_vector.cpp  stack_vector.h  stats.cpp  stats.h  string_set.cpp  text_editor.cpp  translator.cpp
week_5/: async.cpp  boost_check.cpp  concurrent_map.cpp  explore_key_words.cpp  group_heavy_strings.cpp  josephus_permutation.cpp  matrix_sum.cpp  merge_sort_3.cpp  paginator.cpp  priority_collection_2.cpp  simple_vector.h  simple_vector_2.cpp  simple_vector_2.h  simple_vector_copy_assignment.cpp  split_into_sentences.cpp  synchronized.cpp
